Kube/beezz-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-app
  labels:
    app: register-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: register-app
  template:
    metadata:
      labels:
        app: register-app
    spec:
      containers:
      - name: app-test
        image: beezzbank/register-app:1.4
        ports:
        - containerPort: 3000
