Kube/beezz-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: register-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
