Kube/beezz-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beezz-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: register-app.beezzlab.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: app-service
              port:
                number: 3000
